# agenthub

./: .gitignore  Cargo.toml  LICENSE  README.md  desktop.sh  install.sh  release.sh  run.sh
.claude/: settings.json
.claude/hooks/: subagent-notify.sh
.claude/skills/: agenthub
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-06-16-agenthub-doc-viewer.md  2026-06-18-ide-editor-and-multiroot-files.md  2026-06-18-workspaces-and-directory-picker.md  2026-06-29-editor-panel-tabs-resize.md  2026-07-01-canvas-group-box.md
docs/superpowers/specs/: 2026-06-16-agenthub-design.md  2026-06-16-notepad-living-memory-design.md  (+3 more)
scripts/: agenthub-start.cmd  agenthub-start.ps1  agenthub-start.sh
scripts/.agenthub/: sessions.json
skills/agenthub/: SKILL.md
src/: hub.rs  lib.rs  main.rs  protocol.rs  pty.rs  registry.rs  routes.rs  sessions.rs  workspace.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: api.rs  hub.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: AgentCanvas.tsx  AgentPanel.tsx  App.css  App.tsx  CanvasToolbar.tsx  CanvasWidget.tsx  DirectoryPicker.test.tsx  DirectoryPicker.tsx  Editor.test.tsx  Editor.tsx  EditorPanel.test.tsx  EditorPanel.tsx  FileTree.test.tsx  FileTree.tsx  GroupBox.tsx  TerminalNode.tsx  ThemeToggle.tsx  Viewer.test.tsx  Viewer.tsx  WorkspaceSidebar.tsx  api.test.ts  api.ts  canvasMath.test.ts  canvasMath.ts  hub.ts  keymap.test.ts  keymap.ts  main.tsx  pty.ts  sessions.ts  theme.ts  tree.test.ts  tree.ts  useNodeDrag.ts  workspaces.test.ts  workspaces.ts
