[package]
name = "agenthub"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "agenthub"
path = "src/main.rs"

[[bin]]
name = "agenthub-connect"
path = "src/bin/connect.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dashmap = "6"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
