[package]
name = "agenthub"
version = "0.1.0"
edition = "2021"
default-run = "agenthub"

[[bin]]
name = "agenthub"
path = "src/main.rs"

[[bin]]
name = "agenthub-connect"
path = "src/bin/connect.rs"

[[bin]]
name = "agenthub-cli"
path = "src/bin/agenthub-cli.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dashmap = "6"
parking_lot = "0.12"
portable-pty = "0.8"
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures = "0.3"
